--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "lodash": "^4.17.11",
     "material-ui": "^0.20.2",
+    "material-ui-rating": "^2.0.0",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
@@ -14,6 +15,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-star-rating": "^1.4.2",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.1",
     "redux-form-material-ui": "^4.3.4",
     "redux-logger": "^3.0.6",
