--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lodash": "^4.17.11",
     "material-ui": "^0.20.2",
     "material-ui-rating": "^2.0.0",
+    "material-ui-toggle-icon": "^1.0.2",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
